BE: update status booking
