# backend/routes/BookingRoute.js
@@ -1,14 +1,14 @@
 const express = require('express');
-const { checkUser } = require('../middlewares/auth');
-const { checkAdmin } = require('../middlewares/auth');
+const { checkUser, checkReceptionist } = require('../middlewares/auth');
 const router = express.Router();
 
 const bookingController = require('../controllers/BookingController');
 
 router.get('/getRoom', bookingController.getRoom);
-router.get('/getAllBooking', checkAdmin, bookingController.getAllBooking);
+router.get('/getAllBooking', checkReceptionist, bookingController.getAllBooking);
 router.get('/getBooking', checkUser, bookingController.getBooking);
 router.post('/create', checkUser, bookingController.createBooking);
 router.post('/delete', checkUser, bookingController.deleteBooking);
+router.post('/updateStatus', checkReceptionist, bookingController.updateStatus);
 
 module.exports = router;
